--- a/currencyhedging.html
+++ b/currencyhedging.html
@@ -153,11 +153,11 @@
 					<br><br>
 					<div class="col-sm-12">
 						
-						<p>Do you know you can avert losses to your businesses from foreign currency fluctuations? </p><p>Why should you live in fear when there are instruments available to manage such risks!</p> 
-						<p>Smart and savvy exporters and importers use currency hedging to mitigate the risk and even increase their profitability upto 25%. </p>
-						<p>All the big retailers that operate internationally use currency hedging to make sure their profits aren’t eroded by currency changes, and small businesses can do it, too.</p><p>At investkeen, among several ways to hedge currency, we use future and options to safeguard your timed transactions, with best research to make solid foundation.</p>
-						<p>
-						If you are interested to know more about our strategies, schedule a call with us below:</p>
+						<p>Do you know you can avert losses to your businesses from foreign currency fluctuations?<br> Why should you live in fear when there are instruments available to manage such risks!<br>
+						Smart and savvy exporters and importers use currency hedging to mitigate the risk and even increase their profitability upto 25%.<br>
+						All the big retailers that operate internationally use currency hedging to make sure their profits aren’t eroded by currency changes, and small businesses can do it, too. <br>At investkeen, among several ways to hedge currency, we use future and options to safeguard your timed transactions, with best research to make solid foundation. </p>
+						
+						If you are interested to know more about our strategies, schedule a call with us below:
 
 						<!-- Change the width and height values to suit you best -->
 						<div class="typeform-widget" data-url="https://investkeen.typeform.com/to/mxEpkU" data-text="currency hedging" style="width:100%;height:500px;"></div>
