--- a/currencyhedging.html
+++ b/currencyhedging.html
@@ -181,7 +181,7 @@
 				<div class="row">
 							<div class="col-sm-3">
 								<div class="widget">
-									<h6 class="montserrat text-uppercase bottom-line">Contact Us</h6>
+									<h6 class="montserrat text-uppercase bottom-line">Our Office</h6>
 									<address class="map-background">
 										<p>C-607, Nirvana Courtyard, <br> Sector 50, Gurgaon, <br>Haryana, India. 122018 <br>
 										Phone: +91 9999007948<br>
@@ -191,9 +191,10 @@
 									</address>
 
 									<ul class="social-icons social-icons-simple">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+										<li><a href="https://www.facebook.com/investkeen"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="https://twitter.com/investkeen"><i class="fa fa-twitter"></i></a></li>
+										<li><a href="https://plus.google.com/102822205721217893577"><i class="fa fa-google-plus"></i></a></li>
+										<li><a href="https://www.linkedin.com/company/13202862"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div>
@@ -207,7 +208,7 @@
 					
 								<div class="col-sm-6">
 									<p class="m-0">
-										Copyright <a href="#">Investkeen Capital</a>, 2016, All Rights Reserved.
+										Copyright <a href="#top">Investkeen Capital</a>, 2016, All Rights Reserved.
 									</p>
 								</div>
 					
