--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 										</div><br>
 										<div class="social-icons social-icons-simple">
 												<a href="https://www.facebook.com/investkeen" target="_blank"><i class="fa fa-facebook"></i></a>
-												<!-- <a href="#" target="_blank"><i class="fa fa-twitter"></i></a> -->
 												<a href="https://www.linkedin.com/company/13202862" target="_blank"><i class="fa fa-linkedin"></i></a>
-												<!-- <a href="#" target="_blank"><i class="fa fa-google-plus"></i></a> -->
+												<a href="https://twitter.com/investkeen"><i class="fa fa-twitter"></i></a>
+												<a href="https://plus.google.com/102822205721217893577"><i class="fa fa-google-plus"></i></a>
 										</div>
 
 										
@@ -782,16 +782,16 @@
 					<!--  -->
 			
 					<!-- TWITTER WIDGET -->
-					<!-- <div class="col-sm-3">
+					<div class="col-sm-3">
 						<div class="widget">
-							<h6 class="montserrat text-uppercase bottom-line">Latest Twitts</h6>
-							<div class="twitter-feed" data-twitter="345170787868762112"></div>
+							<h6 class="montserrat text-uppercase bottom-line">Latest Tweets</h6>
+							<div class="twitter-feed" data-twitter="345170787868762112" id="twitter-0"></div>
 						</div>
-					</div> -->
+					</div>
 					<!-- END TWITTER WIDGET -->
 			
 					<!-- RECENT POSTS WIDGET -->
-					<!-- <div class="col-sm-3">
+		<!-- 			<div class="col-sm-3">
 						<div class="widget">
 							<h6 class="montserrat text-uppercase bottom-line">Recent Posts</h6>
 							<ul class="recent-posts">
@@ -841,8 +841,8 @@
 
 							<ul class="social-icons social-icons-simple">
 								<li><a href="https://www.facebook.com/investkeen"><i class="fa fa-facebook"></i></a></li>
-								<!-- <li><a href=""><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+								<li><a href="https://twitter.com/investkeen"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="https://plus.google.com/102822205721217893577"><i class="fa fa-google-plus"></i></a></li>
 								<li><a href="https://www.linkedin.com/company/13202862"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
