--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div class="hero-caption">
 						<div class="hero-text">
 
-							<div class="container" style="margin-right: -65px !important;">
+							<div class="container">
 
 								<div class="row">
 									<div class="col-sm-12 text-right">
@@ -127,8 +127,8 @@
 										<div class="social-icons social-icons-simple">
 												<a href="https://www.facebook.com/investkeen" target="_blank"><i class="fa fa-facebook"></i></a>
 												<a href="https://www.linkedin.com/company/13202862" target="_blank"><i class="fa fa-linkedin"></i></a>
-												<a href="https://twitter.com/investkeen"><i class="fa fa-twitter"></i></a>
-												<a href="https://plus.google.com/102822205721217893577"><i class="fa fa-google-plus"></i></a>
+												<a href="https://twitter.com/investkeen" target="_blank"><i class="fa fa-twitter"></i></a>
+												<a href="https://plus.google.com/102822205721217893577" target="_blank"><i class="fa fa-google-plus"></i></a>
 										</div>
 
 										
@@ -782,12 +782,12 @@
 					<!--  -->
 			
 					<!-- TWITTER WIDGET -->
-					<div class="col-sm-3">
+					<!-- <div class="col-sm-3">
 						<div class="widget">
 							<h6 class="montserrat text-uppercase bottom-line">Latest Tweets</h6>
 							<div class="twitter-feed" data-twitter="345170787868762112" id="twitter-0"></div>
 						</div>
-					</div>
+					</div> -->
 					<!-- END TWITTER WIDGET -->
 			
 					<!-- RECENT POSTS WIDGET -->
@@ -840,10 +840,10 @@
 							</address>
 
 							<ul class="social-icons social-icons-simple">
-								<li><a href="https://www.facebook.com/investkeen"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="https://twitter.com/investkeen"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="https://plus.google.com/102822205721217893577"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="https://www.linkedin.com/company/13202862"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="https://www.facebook.com/investkeen"  target="_blank"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://twitter.com/investkeen" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="https://plus.google.com/102822205721217893577" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.linkedin.com/company/13202862" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 					</div>
