--- a/trader.html
+++ b/trader.html
@@ -187,10 +187,10 @@
 									</address>
 
 									<ul class="social-icons social-icons-simple">
-										<li><a href="https://www.facebook.com/investkeen"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="https://twitter.com/investkeen"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="https://plus.google.com/102822205721217893577"><i class="fa fa-google-plus"></i></a></li>
-										<li><a href="https://www.linkedin.com/company/13202862"><i class="fa fa-linkedin"></i></a></li>
+										<li><a href="https://www.facebook.com/investkeen" target="_blank"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="https://twitter.com/investkeen" target="_blank"><i class="fa fa-twitter"></i></a></li>
+										<li><a href="https://plus.google.com/102822205721217893577" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+										<li><a href="https://www.linkedin.com/company/13202862" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div>
