--- a/epit.html
+++ b/epit.html
@@ -114,7 +114,7 @@
 								<h1 class="text-xxl alegreyasc m-0">Executive Program in Investment and Trading <br>(EPIT)</h1>
 								<div class="col-sm-12 text-headerline text-center">
 								<br>
-								<p class="text-aboutus " style="font-family: 'Open Sans', sans- serif; font-weight: 100;">Are you looking to build a career in the stock market? If yes, then this course will give you a platform. EPIT is designed to expose students to different areas of stock market trading. We cover topics ranging from fundamentals of financial markets upto becoming a good advisor and trader in the investment banking domain. Classes are both theoretical and practical. </p>
+								<p class="text-aboutus " style="font-family: 'Open Sans', sans- serif; font-weight: 100;">Are you looking to build a career in the stock market? EPIT course gives you a platform. It is designed to expose students to different areas of stock market trading. We have covered topics ranging from fundamentals of financial markets upto becoming a good advisor and trader in the investment banking domain. Classes are both theoretical and practical. </p>
 								
 								<div class="m-t-50">
 								<a class="typeform-share btn btn-individual" href="https://investkeen.typeform.com/to/B4U4ds" data-mode="1" target="_blank">Schedule a call</a>
@@ -232,10 +232,10 @@
 
 					</div>
 				
-					<div class="m-t-50  text-center m-b-20">
+					<!-- <div class="m-t-50  text-center m-b-20">
 							<a href="../16hrs.html" class="btn btn-circle btn-white btn-insidewhitebg">Explore 16 Hours</a>
 					</div>
-
+ -->
 			</div>
 		</section>
 	
