--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 
-	<!-- Bootstrap core CSS -->
-<!-- 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+	
+	<!-- <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">  -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	
 	<!-- Icon Fonts -->
@@ -37,7 +37,7 @@
 	<!-- Template core CSS -->
 	<link href="assets/css/vertical.min.css" rel="stylesheet">
 	<link href="assets/css/template.css" rel="stylesheet">
-	<script>
+<!-- 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -46,7 +46,7 @@
 	  ga('create', 'UA-83600118-1', 'auto');
 	  ga('send', 'pageview');
 
-	</script>
+	</script> -->
 </head>
 <body data-spy="scroll" data-target=".inner-nav">
 
@@ -826,6 +826,7 @@
 						</div>
 					</div> -->
 					<!-- END RECENT POSTS WIDGET -->
+
 			
 					<!-- CONTACT WIDGET -->
 					<div class="col-sm-3">
@@ -848,7 +849,23 @@
 						</div>
 					</div>
 					<!-- END CONTACT WIDGET -->
-			
+
+					<div class="col-sm-2 col-sm-offset-6" id="site-map">
+						<div class="widget">
+							<h6 class="montserrat text-uppercase bottom-line">Site Map</h6>
+							<ul class="recent-posts">
+
+								<li><a href="http://www.investkeen.com">Home</a></li>
+								 <li><a href="http://www.investkeen.com/investor.html">Be An Investor</a></li>
+								 <li><a href="http://www.investkeen.com/trader.html">Be A Trader</a></li>
+								 <li><a href="http://www.investkeen.com/currencyhedging.html">Currency Hedging</a></li>
+								 <li><a href="http://www.investkeen.com/16hrs.html">16 Hours Course</a></li>
+								 <li><a href="http://www.investkeen.com/epit.html">EPIT Course</a></li>
+							</ul>
+					
+						</div>
+					</div>	
+
 				</div><!-- .row -->
 			
 				<div class="copyright">
@@ -883,7 +900,7 @@
 
 	<script src="assets/js/jquery-2.2.3.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js?v=3"></script>
-<!-- 	<script src="assets/bootstrap/js/bootstrap.min.js"></script> -->
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="assets/js/plugins.min.js"></script>
 	<script src="assets/js/custom.min.js"></script>
