just came back to say if you havent watched mr robot yet, GO WATCH IT NOW!

--- a/epit.html
+++ b/epit.html
@@ -112,7 +112,7 @@
 							<div class="col-sm-12 text-center">
 								<br>
 								<h1 class="text-xxl alegreyasc m-0">Executive Program in Investment and Trading <br>(EPIT)</h1>
-								<div class="col-sm-12 text-headerline text-center">
+								<div class="col-sm-12 text-normal text-center text-headerline"><br>
 								<br>
 								<p class="text-aboutus " style="font-family: 'Open Sans', sans- serif; font-weight: 100;">Are you looking to build a career in the stock market? EPIT course gives you a platform. It is designed to expose students to different areas of stock market trading. We have covered topics ranging from fundamentals of financial markets upto becoming a good advisor and trader in the investment banking domain. Classes are both theoretical and practical. </p>
 								
